--- a/style.css
+++ b/style.css
@@ -10,4 +10,23 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
+    background-color: var(--primary-normal);
+}
+
+button {
+    font-family: 'Sora', sans-serif;
+    cursor: pointer;
+}
+
+svg {
+    width: 100%;
+}
+
+img {
+    width: 100%;
+}
+
+a {
+  cursor: pointer;
+    text-decoration: none;
 }
