--- a/partials/header.css
+++ b/partials/header.css
@@ -52,3 +52,27 @@ i {
     justify-content: center;
     margin-top: 14px;
 }
+
+@media screen and (max-width: 768px) {
+
+    .header-content {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header-content i {
+        margin-top: 16px;
+        font-size: 34px;
+    }
+
+    .header-logo img {
+        width: 160px;
+        margin-top: 46px;
+    }
+
+    .header-button {
+        display: none;
+    }
+}
