finished the proposed layout

--- a/partials/colors.css
+++ b/partials/colors.css
@@ -7,7 +7,7 @@
     --secondary-dark: #06090c;
     --secondary-light: #1a1d25;
 
-    --black-normal: 232224;
+    --black-normal: #232224;
     --black-dark: #161617;
     --black-light: #353436;
 
