--- a/partials/layout.css
+++ b/partials/layout.css
@@ -235,3 +235,48 @@
     gap: 8px;
     color: var(--white-normal);
 }
+
+
+/*------- whatsapp button*/
+
+.btn-whatsapp {
+    position: fixed;
+    bottom: 14px;
+    right: 24px;
+    z-index: 99;
+}
+
+.btn-whatsapp img {
+    max-width: 74px;
+    transition: transform 0.4s;
+}
+
+.btn-whatsapp img:hover {
+    transform: scale(1.1);
+}
+
+.btn-whatsapp .whatsapp-tooltip-text {
+    visibility: hidden;
+    position: absolute;
+    width: 120px;
+    top: 8px;
+    left: -144px;
+    padding: 6px;
+    border-radius: 8px;
+    text-align: center;
+    background-color: var(--black-normal);
+    color: var(--white-normal);
+    opacity: 0;
+    transition: opacity 0.4s;
+}
+
+.btn-whatsapp:hover .whatsapp-tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+    .btn-whatsapp img {
+        max-width: 64px;
+    }
+}
